unpackaged/main/default/objects/SWOT_Action_4th_Quarter__c/SWOT_Action_4th_Quarter__c.object-meta.xml
<CustomObject>
    <label>SWOT Action 4th Quarter</label>
    <nameField>
        <displayFormat>SWA4_{00000}</displayFormat>
        <label>SWOT Action 4th Quarter Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SWOT Actions 4th Quarter</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>