unpackaged/main/default/objects/SWOT_Action_4th_Quarter__c/fields/Action_4th_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Action_4th_Quarter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Action 4th Quarter</label>
    <referenceTo>Action_4th_Quarter__c</referenceTo>
    <relationshipLabel>SWOTs</relationshipLabel>
    <relationshipName>SWOT_Actions_4th_Quarter</relationshipName>
    <type>Lookup</type>
</CustomField>