unpackaged/main/default/objects/SWOT_Action_4th_Quarter__c/fields/SWOT_Workstream1__c.field-meta.xml
<CustomField>
    <fullName>SWOT_Workstream1__c</fullName>
    <formula>TEXT( SWOT__r.Workstream1__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SWOT Workstream</label>
    <type>Text</type>
</CustomField>