unpackaged/main/default/objects/SWOT_Action_4th_Quarter__c/fields/Workstream1__c.field-meta.xml
<CustomField>
    <fullName>Workstream1__c</fullName>
    <formula>TEXT( Action_4th_Quarter__r.Workstream1__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Workstream</label>
    <type>Text</type>
</CustomField>